# DB_Kovylek_prod

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
attendance/: admin.py  constants.py  forms.py  models.py  urls.py  utils.py  views.py
attendance/migrations/: 0001_initial.py  0002_alter_attendancerecord_unique_together.py
attendance/templates/attendance/: attendance_form.html  base.html  calendar.html  home.html  repetition_confirm_delete.html  repetition_form.html  repetition_list.html
attendance/templates/includes/: header.html
attendance/templatetags/: delta_filters.py
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
static/css/: navbar.css
students/: admin.py  constants.py  models.py  urls.py  views.py
students/migrations/: 0001_initial.py  0002_alter_group_gender_alter_student_gender.py  0003_group_image.py
students/templates/students/: main.html  students_list.html
users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  register.html
