[tool.poetry]
name = "kovylek-db-25"
version = "0.1.0"
description = ""
authors = ["GeeMoowy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
django = "^5.2.5"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
django-phonenumber-field = "^8.1.0"
phonenumbers = "^9.0.10"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
